# kurt3d

./: .gitignore  CMakeLists.txt  README  mainpage.dox  manifest.xml  package.xml  stack.xml
config/: tilt3d_laser_filter.yaml  tilt3d_self_filter.yaml
include/: USBInterface.h
launch/: 3d_scanner.launch  kurt3d.launch  ps3joy_kurt3d.launch  tilt3d_filter_chain.launch
msg/: ServoControl.msg
src/: USBInterface.cpp  USBInterface.h  laserscanner_node.cpp  ps3joy_kurt3d.cpp  servo_node.cpp
srv/: ServoCommand.srv  Servo_Command.srv
urdf/: 3d_scanner.urdf  kurt3d.urdf.xacro  kurt3d_top.urdf.xacro  left_cam.urdf  urdf_left.sh  urdf_right.sh
