<package format="2">
  <name>kurt3d</name>
  <version>0.1.1</version>
  <description>This package contains the required nodes and launchfiles to fire up the KURT3D robot with a 3D Laserscan capabilities. It provides functionality to control the five servo motors via the pololu micro usb controller card and make us of it to take and assemble laser scans with a sick lms200 laser scan unit.</description>
  <maintainer>Thomas Wiemann (twiemann@uos.de)</maintainer>
  <author>Thomas Wiemann, Benjamin Kisliuk, Alexander Mock</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/kurt3d</url>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kurt_base</build_depend>
  <build_depend>kurt_bringup</build_depend>
  <build_depend>laser_assembler</build_depend>
  <build_depend>robot_self_filter</build_depend>
  <build_depend>uos_common_urdf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kurt_base</run_depend>
  <run_depend>kurt_bringup</run_depend>
  <run_depend>laser_assembler</run_depend>
  <run_depend>robot_self_filter</run_depend>
  <run_depend>uos_common_urdf</run_depend>

</package>


